elk stack + readme + agent refactorings